--- a/ArrowFunctions/index.html
+++ b/ArrowFunctions/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is a example.</p>
+    <button id="btn">Click me!</button>
+    <p id="demo"> </p>
+
+        <script src="index.js"></script>
+
 </body>
 </html>
