--- a/Closures/index.html
+++ b/Closures/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is a example.</p>
+    <p>This is Closures</p>
+    <script src="index.js"></script>
 </body>
 </html>
