--- a/DRS/index.html
+++ b/DRS/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is a example.</p>
+    <p>This is DRS</p>
+    <script src="index.js"></script>
 </body>
 </html>
