--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 <h1><a href="#">
       <img src="https://i.imgur.com/NOpiPi1.png" style="width:200px;height:200px;" title="qa logo"/></a>
       </h1>
+      <h2>Hi, I'm Dinu and I like to DESTROY your application
+      </h2>
     </div>
     <div class="w3-padding-64">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Resume</a>
+      <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Projects</a>
+      <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Service</a>
       <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
     </div>
   </div>
@@ -39,8 +41,8 @@
 <div class="w3-row">
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
-      <h2>My Work</h2>
-      <p>Some of my latest projects.</p>
+      <h2>Projects</h2>
+      <p>Some of my latest wroks.</p>
     </div>
     <div class="w3-row">
       <div class="w3-half">
@@ -71,8 +73,8 @@
   </div>
   <div class="w3-half w3-indigo w3-container" style="min-height:800px">
     <div class="w3-padding-64 w3-center">
-      <h2>Resume</h2>
-      <p>A draft from my CV</p>
+      <h2>Services</h2>
+      <p>Here are some of the services I'll provide for you</p>
       <div class="w3-container w3-responsive">
         <table class="w3-table">
           <tr>
