--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
 <h1><a href="#">
       <img src="https://i.imgur.com/NOpiPi1.png" style="width:200px;height:200px;" title="qa logo"/></a>
       </h1>
-      <h2>Hi, I'm Dinu and I like to DESTROY your application
+      <h2 style="font-family: 'Times New Roman', serif;">Hi, I'm Dinu and I like to DESTROY
       </h2>
+      <h5 style="font-family: 'Times New Roman', serif;">but I also love creating</h5>
     </div>
-    <div class="w3-padding-64">
+    <div class="w3-padding-31">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
       <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Projects</a>
       <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Service</a>
       <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
     </div>
   </div>
-  <div class="w3-half w3-blue-grey w3-container" style="height:700px">
+  <div class="w3-half w3-blue-grey w3-container" style="height:700px">a
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <img src="https://i.imgur.com/EXS8BTG.png" class="w3-margin w3-circle" alt="Dinu Gherciu" style="width:35%">
